--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-	 "create-database": "psql -U postgres -h localhost -f sql/create-database.sql",
+    "create-database": "psql -U postgres -h localhost -f sql/create-database.sql",
     "create-tables": "psql -U postgres -h localhost -d mcoffee -f sql/create-tables.sql",
     "seed-tables": "psql -U postgres -h localhost -d mcoffee -f sql/seed-tables.sql",
-	 "dev": "nodemon -r dotenv/config index.js"
+    "dev": "nodemon -r dotenv/config index.js"
   },
   "author": "",
   "license": "ISC",
@@ -17,6 +17,7 @@
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
     "pg": "^8.7.1",
     "pg-promise": "^10.11.0"
   }
